recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: identifier expected but 'override' found.
def override run() {
    ^